force-app/zurich-base/main/default/objects/EmailRoutingType__mdt/EmailRoutingType__mdt.object-meta.xml
<CustomObject>
    <label>EmailRoutingType</label>
    <pluralLabel>EmailRoutingTypes</pluralLabel>
</CustomObject>