force-app/zurich-base/main/default/objects/EmailRoutingType__mdt/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>