force-app/zurich-base/main/default/objects/EmailRoutingType__mdt/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Email address</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>