force-app/zurich-base/main/default/objects/EmailRoutingType__mdt/fields/RoutingType__c.field-meta.xml
<CustomField>
    <fullName>RoutingType__c</fullName>
    <label>Routing Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industry</fullName>
                <default>true</default>
                <label>Industry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>